fixed collapsed searchbar float issue

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,7 +1,7 @@
 /*!
  * DEVELOPMENT VERSION
  * EERE Template v0.0.1 (https://github.com/NREL/eere-app-template)
- * 2014-12-15 9:59
+ * 2014-12-18 12:16
  */
 /*!
  *  moakley
@@ -5940,10 +5940,11 @@ button.close {
  **************************************************/
 
 .banner-links + .navbar-collapse {
-    clear: both; /* clear the logo, and the banner-links if present */
     margin-top:5px;
 }
-
+.banner-tools .navbar-collapse  {
+    clear: both;
+}
 
 
 
@@ -5960,8 +5961,6 @@ button.close {
 }
 
 .searchbar-form button {
-/*    background-color:#5E6A71;
-    border-color:#5E6A71;*/
     color:#fff;
     font-size: 12px;
     height:26px;
@@ -5970,9 +5969,6 @@ button.close {
 
 @media (min-width: 768px) {
     .searchbar-form button {
-        /*background-color: #D1D5D8;
-        border-color: #D1D5D8;
-        color: #000;*/
     }
 }
 
